--- a/instagram.html
+++ b/instagram.html
@@ -68,6 +68,8 @@ body{
 }
  .card {
 	 position: relative;
+	 left: 100%;
+	 bottom: 30%;
 	 display: flex;
 	 align-items: flex-end;
 	 overflow: hidden;
@@ -109,17 +111,17 @@ body{
 	 transition: transform calc(var(--d) * 2) var(--e);
 }
  .card:nth-child(1):before {
-	 background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background: url(https://images.unsplash.com/photo-1611262588024-d12430b98920?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=667&q=80) no-repeat center center fixed;
 }
  .card:nth-child(2):before {
-	 background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background: url(https://images.unsplash.com/photo-1611262588024-d12430b98920?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=667&q=80) no-repeat center center fixed;
 }
- .card:nth-child(3):before {
+/* .card:nth-child(3):before {
 	 background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
 }
  .card:nth-child(4):before {
 	 background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
+}*/
 
  .content {
 	 position: relative;
@@ -204,19 +206,19 @@ body{
 	<main class="page-content">
 	  <div class="card">
 	    <div class="content">
-	      <h2 class="title">Mountain View</h2>
-	      <p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
+	      <h2 class="title">Stories</h2>
+	      <p class="copy">Check out all the awesome Instagram Story templates.</p>
 	      <button onclick="location.href='insta1.html'" type="button" class="btn">Want?</button>
 	    </div>
 	  </div>
 	  <div class="card">
 	    <div class="content">
-	      <h2 class="title">To The Beach</h2>
-	      <p class="copy">Plan your next beach trip with these fabulous destinations</p>
-	      <button class="btn">View Trips</button>
+	      <h2 class="title">Posts</h2>
+	      <p class="copy">Check out all the awesome Instagram Posts templates.</p>
+	      <button onclick="location.href='insta2.html'" type="button" class="btn">Want?</button>
 	    </div>
 	  </div>
-	  <div class="card">
+	  <!-- <div class="card">
 	    <div class="content">
 	      <h2 class="title">Desert Destinations</h2>
 	      <p class="copy">It's the desert you've always dreamed of</p>
@@ -236,7 +238,7 @@ body{
 	      <p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
 	      <button class="btn">View Trips</button>
 	    </div>
-	  </div>
+	  </div> -->
 	</main>
 
 </body>
