--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@ body .name:hover .multi-button, body .name .multi-button:focus-within {
 			<div class="text-container">
 				<h2>About</h2>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					We are a team who believes that good design is powerful and important to convey right message. We built this platform with the aim to help influencers or anyone who uses social media. Here, we provide some of the trending templates for different social media  platforms. 
 				</p>
 			</div>
 			
