--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	</nav>
 
 	<div class="heading">
-		<h1>Something Cool Which you never thought of</h1>
-		<h2>For the <span id="spin"></span>!</h2>
+		<h1>Something Cool for the creators for thier social media handles</h1>
+		<h2><span id="spin"></span>!</h2>
 
 		
 	</div>
