--- a/fb2.html
+++ b/fb2.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>Harvest vase</title>
+  <title>Cover</title>
   <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
   <style type="text/css">
     body{
