--- a/fb2.html
+++ b/fb2.html
@@ -249,7 +249,7 @@ div.backBtn:hover span.bLine {
     </div>
     <div class="product-info">
       <div class="product-text">
-        <h1>Fb Post</h1>
+        <h1>Fb Cover</h1>
         <h2></h2>
         <p>Collection of editable templates for<br> every kind of occasions<br> find the perfect template for you and save it.<br></p></div>
       <div class="product-price-btn">
