--- a/twt.html
+++ b/twt.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>Harvest vase</title>
+  <title>Post</title>
   <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
   <style type="text/css">
     body{
@@ -249,13 +249,11 @@ div.backBtn:hover span.bLine {
     </div>
     <div class="product-info">
       <div class="product-text">
-        <h1>Harvest Vase</h1>
-        <h2>by studio and friends</h2>
-        <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
-      </div>
+        <h1>Twitter Post</h1>
+        <h2></h2>
+        <p>Collection of editable templates for<br> every kind of occasions<br> find the perfect template for you and save it.<br></p></div>
       <div class="product-price-btn">
-        <p><span>78</span>$</p>
-        <button type="button">buy now</button>
+        <button onclick="location.href='https://www.canva.com/design/DAEl2nmo268/8lqFLQTONwAgkQHDV6WarA/view?utm_content=DAEl2nmo268&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton&mode=preview'" type="button">Show me</button>
       </div>
     </div>
   </div>
